log
Thu 16 May 2024 04:08:44 AM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  3|4
total_score: 20/70
f86e449
Thu 16 May 2024 04:13:41 AM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:72:22: error: ‘j’ undeclared (first use in this function)
   72 |       if (n->sudo[i][j] == 0){
      |                      ^
sudoku.c:72:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
84f0161
Thu 16 May 2024 04:14:06 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:10: error: expected ‘,’ or ‘;’ before ‘if’
   68 |          if(n->sudo[i][j] == 0)
      |          ^~
sudoku.c:67:14: error: unused variable ‘columna’ [-Werror=unused-variable]
   67 |          int columna = j
      |              ^~~~~~~
sudoku.c:73:22: error: ‘j’ undeclared (first use in this function)
   73 |       if (n->sudo[i][j] == 0){
      |                      ^
sudoku.c:73:22: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
a03ed24
Thu 16 May 2024 04:14:11 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:10: error: expected ‘,’ or ‘;’ before ‘if’
   68 |          if(n->sudo[i][j] == 0)
      |          ^~
sudoku.c:67:14: error: unused variable ‘columna’ [-Werror=unused-variable]
   67 |          int columna = j
      |              ^~~~~~~
sudoku.c:73:22: error: ‘columna’ undeclared (first use in this function)
   73 |       if (n->sudo[i][columna] == 0){
      |                      ^~~~~~~
sudoku.c:73:22: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
ed5d07a
Thu 16 May 2024 04:14:35 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:21: error: expected ‘;’ before ‘if’
   67 |          columna = j
      |                     ^
      |                     ;
   68 |          if(n->sudo[i][j] == 0)
      |          ~~          
Compilation failed
c7ff242
Thu 16 May 2024 04:14:44 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
b4ac34a
Thu 16 May 2024 04:15:44 AM UTC: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 20/70
9eb0984
Thu 16 May 2024 04:16:02 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
d5a1a2d
Thu 16 May 2024 04:17:48 AM UTC: 
 sudoku.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:80:15: error: ‘i’ undeclared (first use in this function)
   80 |    int fila = i;
      |               ^
sudoku.c:80:15: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:87:1: error: expected expression before ‘}’ token
   87 | }
      | ^
sudoku.c:85:8: error: unused variable ‘contador’ [-Werror=unused-variable]
   85 |    int contador = 0;
      |        ^~~~~~~~
sudoku.c:84:8: error: unused variable ‘fila_final’ [-Werror=unused-variable]
   84 |    int fila_final = fila;
      |        ^~~~~~~~~~
sudoku.c:83:8: error: unused variable ‘fila_inicial’ [-Werror=unused-variable]
   83 |    int fila_inicial = fila;
      |        ^~~~~~~~~~~~
sudoku.c:82:8: error: unused variable ‘columna_final’ [-Werror=unused-variable]
   82 |    int columna_final = columna;
      |        ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fadf138
Thu 16 May 2024 04:19:21 AM UTC: 
 sudoku.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:81:15: error: ‘i’ undeclared (first use in this function)
   81 |    int fila = i;
      |               ^
sudoku.c:81:15: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:84:16: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   84 |          Node *aux = createNode();
      |                ^~~
sudoku.c:81:8: error: unused variable ‘fila’ [-Werror=unused-variable]
   81 |    int fila = i;
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
41dacfb
Thu 16 May 2024 04:19:38 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:83:8: error: redeclaration of ‘fila’ with no linkage
   83 |    int fila = i;
      |        ^~~~
sudoku.c:65:8: note: previous declaration of ‘fila’ with type ‘int’
   65 |    int fila;
      |        ^~~~
sudoku.c:83:15: error: ‘i’ undeclared (first use in this function)
   83 |    int fila = i;
      |               ^
sudoku.c:83:15: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:86:16: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   86 |          Node *aux = createNode();
      |                ^~~
sudoku.c:83:8: error: unused variable ‘fila’ [-Werror=unused-variable]
   83 |    int fila = i;
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
0dbc3f1
Thu 16 May 2024 04:19:48 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:85:16: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   85 |          Node *aux = createNode();
      |                ^~~
sudoku.c:65:8: error: variable ‘fila’ set but not used [-Werror=unused-but-set-variable]
   65 |    int fila;
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
7c0ce12
Thu 16 May 2024 04:20:01 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:85:16: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   85 |          Node *aux = createNode();
      |                ^~~
cc1: all warnings being treated as errors
Compilation failed
9c39f92
Thu 16 May 2024 04:21:18 AM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|4
total_score: 20/70
dc104e5
Thu 16 May 2024 04:22:06 AM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
c927670
Thu 16 May 2024 04:22:55 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
f05b6a7
Thu 16 May 2024 04:23:29 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|4
total_score: 20/70
56878ce
Thu 16 May 2024 04:24:18 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 20/70
aa0a2af
Thu 16 May 2024 04:24:24 AM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  3|4
total_score: 20/70
b0abd39
Thu 16 May 2024 04:24:42 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
19486d6
Thu 16 May 2024 04:24:49 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
1a5949c
Thu 16 May 2024 04:25:11 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
8092ff8
Thu 16 May 2024 04:26:50 AM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
e798149
Thu 16 May 2024 04:27:04 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|3
total_score: 30/70
39a98e9
Thu 16 May 2024 04:28:41 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
0183877
Thu 16 May 2024 04:30:46 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:90:13: error: expected ‘(’ before ‘is_valid’
   90 |          if is_valid(aux)
      |             ^~~~~~~~
      |             (
Compilation failed
2bec405
